Finished first exercise and second exercise

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
+    <title>JavaScript basics 3</title>
+</head>
+<body>
+    <script src="./javascrip.js"></script>
+    <div class="header">
+        <h1><a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">Project Odin - JavaScript Basics 3</a></h1>
+    </div>
+    <div class="exercises" style="margin-top: 32px;">
+        <p><b>1.</b> Write a function called <b>add7</b> that takes one number and returns that number + 7</p>
+        <p>Using prompt method : <button onclick="add7prompt()">click me</button></p>
+        <p> Using input method : <input id="test1inputin" onkeyup="add7input()"> this value plus 7 is <b id="test1inputout"></b></p>
+    </div>
+    <div class="exercises">
+        <p><b>2.</b> Write a function called <b>multiply</b> that takes 2 numbers and returns their product</p>
+        <p>Using prompt method : <button onclick="multiplyprompt()">click me</button></p>
+        <p> Using input method : <input id="test2inputx" onkeyup="multiplyinput()"> multiplied by <input id="test2inputy" onkeyup="multiplyinput()"> is <b id="test2inputout"></b></p>
+    </div>
+</body>
+</html>
