Finished exercises 3 and 4 Added git logo on img/ folder Added conditionals for inputs

--- a/index.html
+++ b/index.html
@@ -22,5 +22,21 @@
         <p>Using prompt method : <button onclick="multiplyprompt()">click me</button></p>
         <p> Using input method : <input id="test2inputx" onkeyup="multiplyinput()"> multiplied by <input id="test2inputy" onkeyup="multiplyinput()"> is <b id="test2inputout"></b></p>
     </div>
+    <div class="exercises">
+        <p><b>3.</b> Write a function called <b>capitalize</b> that takes a string and returns that string with only the first letter capitalized. Make sure that it can take strings that are lowercase, UPPERCASE or BoTh</p>
+        <p>Using prompt method : <button onclick="capitalizeprompt()">click me</button></p>
+        <p> Using input method : <input id="test3input" onkeyup="capitalizeinput()" style="min-width: 100px;">  <b id="test3inputout"></b></p>
+    </div>
+    <div class="exercises">
+        <p><b>4.</b> Write a function called <b>lastLetter</b> that takes a string and returns the very last letter of that string: </p>
+        <p>Using prompt method : <button onclick="lastletterprompt()">click me</button></p>
+        <p> Using input method : <input id="test4inputin" onkeyup="lastletterinput()"><b id="test4inputout"></b></p>
+    </div>
+    <div class="footer">
+        <a href="https://github.com/Hallimasa/javascript-basics-part3">
+            <img src="./img/github-mark.png" title="git-hub" alt="git-hub" width="36px" height="36px">
+            <p>Hallimasa</p>
+        </a>    
+    </div>
 </body>
 </html>
