Added animation for github logo Fixed some timings of text animations

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     </div>
     <div class="footer">
         <a href="https://github.com/Hallimasa/javascript-basics-part3">
-            <img src="./img/github-mark.png" title="git-hub" alt="git-hub" width="36px" height="36px">
+            <img  class="img-back" src="./img/github-mark-white.svg" title="git-hub" alt="git-hub">
+            <img  class="img-front" src="./img/github-mark.svg" title="git-hub" alt="git-hub" style="margin-left: -36px;">
             <p>Hallimasa</p>
         </a>    
     </div>
